[package]
name = "grpc-service"
authors = ["Rocky Warren <1085683+therockstorm@users.noreply.github.com>"]
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "0.3"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
